--- a/demo_example.html
+++ b/demo_example.html
@@ -77,6 +77,8 @@ div#links {
 
 </style>
 
+<div>TODO: Update me to use the new Player model !!!</div>
+
 <div class="scene">
   <div class="doorContainer">
     <div class="doorSpacer" id="door">
