--- a/test/test-harness.html
+++ b/test/test-harness.html
@@ -41,6 +41,7 @@ var tests = [
   'test-path.html',
   'test-pause.html',
   'test-playback-rate.html',
+  'test-player.html',
   'test-preset-timings.html',
   'test-rectangle.html',
   'test-reparent.html',
