--- a/test/testcases/test-iterations-fill.html
+++ b/test/testcases/test-iterations-fill.html
@@ -141,4 +141,7 @@ for (var i = 0; i < fillModes.length; i++) {
     }, groups[j]);
   }
 }
+for (var j = 0; j < divs.length; j++) {
+  document.timeline.createPlayer(groups[j]);
+}
 </script>
