--- a/test/testcases/test-reparent.html
+++ b/test/testcases/test-reparent.html
@@ -39,19 +39,20 @@ limitations under the License.
 <script src="../../web-animation.js"></script>
 <script>
 
-// Run an animation in the global group. It should animate indefinitely.
+// Run a simple animation. It should animate indefinitely.
 var anim = new Animation(document.getElementById("a"),
     {left: ["100px", "500px"]}, {iterationCount: Infinity, duration: 1.0});
+document.timeline.createPlayer(anim);
 
 // After 2.5s, move it to a parallel group and run that.
 setTimeout(function() {
-  new ParGroup([anim],
-      {direction: "alternate", duration: 2.0, iterationCount: 2.0});
+  document.timeline.createPlayer(new ParGroup([anim],
+      {direction: "alternate", duration: 2.0, iterationCount: 2.0}));
 }, 2500);
 
 // Move it to a new group and run that.
 setTimeout(function() {
-  new ParGroup([anim], {duration: 1.5});
+  document.timeline.createPlayer(new ParGroup([anim], {duration: 1.5}));
 }, 8000);
 
 </script>
