--- a/demos/test-circle-square.html
+++ b/demos/test-circle-square.html
@@ -99,11 +99,12 @@ limitations under the License.
       new Animation(document.querySelector("#b"), {top: "250px", left: "0px"}, 2, redBallMove);
       new Animation(document.querySelector("#b"), {top: "125px", left: "225px"}, 2, redBallMove);
 
-      new ParGroup([blueBallMove, redBallMove]);
+      document.timeline.createPlayer(new ParGroup([blueBallMove, redBallMove]));
 
       var transformGroup = new ParGroup([]);
       new Animation(document.querySelector("#blockA"), {"-webkit-transform": ["translate(0px, 0px) rotate(0deg)", "translate(-450px, 0px) rotate(180deg)"]} , 4, transformGroup);
       new Animation(document.querySelector("#blockB"), {"-webkit-transform": ["translate(0px, 0px) rotate(0deg)", "translate(450px, 0px) rotate(270deg)"]} , 4, transformGroup);
+      document.timeline.createPlayer(transformGroup);
     </script>
   </body>
 </html>
