--- a/test/testcases/test-clone.html
+++ b/test/testcases/test-clone.html
@@ -64,13 +64,11 @@ var elem = document.getElementById("anim");
 var animFunc = {left: "100px"};
 
 // Animation
-var anim = new Animation(elem, animFunc, 1.0, null);
+var anim = new Animation(elem, animFunc, 1.0);
 var clone = anim.clone();
 check(clone instanceof Animation, true, "Clone should be an Animation");
 check(clone.timing.duration, 1.0, "Clone should take Timing.duration");
 check(clone.targetElement, elem, "Clone should take targetElement");
-check(clone.parentGroup, document.animationTimeline,
-    "Clone should not take parentGroup");
 
 /*
 TODO: Reinstate pause functionality.
@@ -99,8 +97,6 @@ checkNotEqual(parGroupClone.children[1], clone,
     "ParGroup clone should clone first child");
 check(parGroupClone.children[1].duration, 1.0,
     "ParGroup clone should clone first child");
-check(parGroupClone.parentGroup, document.animationTimeline,
-    "ParGroup clone should not take parentGroup");
 
 /*
 TODO: Reinstate pause functionality.
@@ -131,8 +127,6 @@ checkNotEqual(seqGroupClone.children[1], clone,
     "SeqGroup clone should clone first child");
 check(seqGroupClone.children[1].duration, 1.0,
     "SeqGroup clone should clone first child");
-check(seqGroupClone.parentGroup, document.animationTimeline,
-    "SeqGroup clone should not take parentGroup");
 
 /*
 TODO: Reinstate pause functionality.
@@ -150,7 +144,7 @@ check(seqGroupClone.iterationTime, 0.6,
 // Child
 var childClone = anim.clone();
 check(anim.parentGroup, seqGroup);
-check(childClone.parentGroup, document.animationTimeline,
+check(childClone.parentGroup, null,
     "Child clone should not take parentGroup");
 
 </script>
