--- a/test/testcases/test-length-units.html
+++ b/test/testcases/test-length-units.html
@@ -79,7 +79,8 @@ for (var j = 0; j < to.length; j++) {
 document.querySelector("table").innerHTML = table;
 
 for (var id in anims) {
-  new Animation(document.querySelector(id), {width: anims[id]}, 2);
+  document.timeline.createPlayer(
+      new Animation(document.querySelector(id), {width: anims[id]}, 2));
 }
 
 </script>
