--- a/test/testcases/test-parent.html
+++ b/test/testcases/test-parent.html
@@ -32,31 +32,30 @@ limitations under the License.
 <div>Right edge of each box should align with black line at end of test.</div>
 <div style="width: 300px;" class="expect"><div id="a" class="anim"></div></div>
 <div style="width: 300px;" class="expect"><div id="b" class="anim"></div></div>
-<div style="width: 100px;" class="expect"><div id="c" class="anim"></div></div>
+<div style="width: 300px;" class="expect"><div id="c" class="anim"></div></div>
 <div style="width: 300px;" class="expect"><div id="d" class="anim"></div></div>
-<div style="width: 300px;" class="expect"><div id="e" class="anim"></div></div>
-<div style="width: 100px;" class="expect"><div id="f" class="anim"></div></div>
 
 <script src="../../web-animation.js"></script>
 <script>
 
-// Lone animation with default parent. Should use default group.
-new Animation(document.getElementById("a"), {left: ["100px", "200px"]}, 1.0);
-// Lone animation with explicit default parent. Should use default group.
-new Animation(document.getElementById("b"), {left: ["100px", "200px"]}, 1.0,
-              undefined);
-// Lone animation with explicit no parent. Should use no group.
-new Animation(document.getElementById("c"), {left: ["100px", "200px"]}, 1.0,
-              null);
+var dt = document.timeline;
 
-// Animation in group with default parent. Should use default group.
+// Lone animation with default parent.
+dt.createPlayer(new Animation(document.getElementById("a"),
+    {left: ["100px", "200px"]}, 1.0));
+// Lone animation with explicit default parent.
+dt.createPlayer(new Animation(document.getElementById("b"),
+    {left: ["100px", "200px"]}, 1.0, undefined));
+
+// Animation in group with default parent.
+var group1 = new ParGroup([], {iterationCount: 3});
+new Animation(document.getElementById("c"), {left: ["100px", "200px"]}, 1.0,
+    group1);
+dt.createPlayer(group1);
+// Animation in group with explicit default parent.
+var group2 = new ParGroup([], {iterationCount: 3}, undefined);
 new Animation(document.getElementById("d"), {left: ["100px", "200px"]}, 1.0,
-              new ParGroup([], {iterationCount: 3}));
-// Animation in group with explicit default parent. Should use default group.
-new Animation(document.getElementById("e"), {left: ["100px", "200px"]}, 1.0,
-              new ParGroup([], {iterationCount: 3}, undefined));
-// Animationation in group with explicit no parent. Should use no group.
-new Animation(document.getElementById("f"), {left: ["100px", "200px"]}, 1.0,
-              new ParGroup([], {iterationCount: 3}, null));
+              group2);
+dt.createPlayer(group2);
 
 </script>
