--- a/test/testcases/test-path.html
+++ b/test/testcases/test-path.html
@@ -69,12 +69,12 @@ var animFunc = new PathAnimationFunction(
     document.querySelector('#path1'));
 animFunc.rotate = true;
 
-new Animation(document.querySelector("#anim1"), animFunc,
-    {duration: 2, iterationCount: 2});
+document.timeline.createPlayer(new Animation(document.querySelector("#anim1"),
+    animFunc, {duration: 2, iterationCount: 2}));
 
 var animFunc2 = new PathAnimationFunction(document.querySelector('#path2'));
 animFunc2.rotate = true;
 
-new Animation(document.querySelector("#anim2"), animFunc2,
-    {duration: 2, iterationCount: 2});
+document.timeline.createPlayer(new Animation(document.querySelector("#anim2"),
+    animFunc2, {duration: 2, iterationCount: 2}));
 </script>
