--- a/test/testcases/test-rectangle.html
+++ b/test/testcases/test-rectangle.html
@@ -39,5 +39,6 @@ var anim = {'clip': [
   'rect(0px, 800px, 600px, 0px)'
 ]};
 var timing = 1;
-new Animation(document.querySelector('#test'), anim, timing);
+document.timeline.createPlayer(
+    new Animation(document.querySelector('#test'), anim, timing));
 </script>
