--- a/test/testcases/test-timing-functions.html
+++ b/test/testcases/test-timing-functions.html
@@ -51,12 +51,12 @@ body { margin: 0px; }
 <script src="../../web-animation.js"></script>
 <script>
 
-new Animation(document.querySelector("#a"), {left: "200px"},
-    {startDelay: 1, duration: 2});
+document.timeline.createPlayer(new Animation(document.querySelector("#a"),
+    {left: "200px"}, {startDelay: 1, duration: 2}));
 var elems = document.querySelectorAll(".test");
 for (var i = 0; i < elems.length; i++) {
   var element = elems[i];
-  new Animation(element, {left: "200px"},
-      {startDelay: 1, duration: 2, timingFunction: element.textContent});
+  document.timeline.createPlayer(new Animation(element, {left: "200px"},
+      {startDelay: 1, duration: 2, timingFunction: element.textContent}));
 }
 </script>
