--- a/test/testcases/test-to-animation.html
+++ b/test/testcases/test-to-animation.html
@@ -75,5 +75,6 @@ var group = new ParGroup([], 2);
 for (var i = 0; i < divs.length; i++) {
   new Animation(divs[i], {left: (100 * (i+1)) + "px"}, 2, group);
 }
+document.timeline.createPlayer(group);
 
 </script>
