--- a/test-text-shadow.html
+++ b/test-text-shadow.html
@@ -18,5 +18,6 @@ limitations under the License.
 <body>The shadows should slide back under the text.
 <script src="web-animation.js"></script>
 <script>
-new Animation(document.body, {'text-shadow': ['100px 100px red, 0px 100px 10px red', '0px 0px']}, 2);
+new Animation(document.body,
+    {'text-shadow': ['100px 100px red, 0px 100px 10px red', '0px 0px']}, 2);
 </script>
