--- a/test-color-names.html
+++ b/test-color-names.html
@@ -168,5 +168,6 @@ var colors = [
   'yellow',
   'yellowgreen'];
 
-new Animation(document.body, {'background-color': colors}, colors.length * 2 / 60);
+new Animation(document.body, {'background-color': colors},
+    colors.length * 2 / 60);
 </script>
