--- a/test-non-numeric.html
+++ b/test-non-numeric.html
@@ -24,8 +24,12 @@ body {
 }
 </style>
 <body>
-<div style='background:lightsteelblue'><div style='background:red' id=test></div></div>
+<div style='background:lightsteelblue'>
+  <div style='background:red' id='test'></div>
+</div>
 <script src="web-animation.js"></script>
 <script>
-new Animation(document.querySelector('#test'), {'display': ['none', 'block', 'none', 'block', 'none', 'block', 'none']}, 0.5);
+new Animation(document.querySelector('#test'),
+    {'display': ['none', 'block', 'none', 'block', 'none', 'block', 'none']},
+    0.5);
 </script>
