--- a/test-start-time-iterations.html
+++ b/test-start-time-iterations.html
@@ -1,4 +1,4 @@
-<!-- 
+<!--
 Copyright 2012 Google Inc. All Rights Reserved.
 
 Licensed under the Apache License, Version 2.0 (the "License");
@@ -97,23 +97,24 @@ var animation = {left: ["100px", "500px"]};
 
 // We use a new group for each animation to avoid coupling due to the intrinsic
 // duration of a par group.
-var group = function(dir) {
-  return new ParGroup([], {iterationCount: 2.0, direction: dir});
+var group = function(direction) {
+  return new ParGroup([], {iterationCount: 2.0, direction: direction});
 };
-var groupWithFixedDuration = function(dir) {
-  return new ParGroup([], {iterationCount: 2.0, direction: dir, duration: 4.0});
+var groupWithFixedDuration = function(direction) {
+  return new ParGroup([],
+      {iterationCount: 2.0, direction: direction, duration: 4.0});
 };
 
 for (var i = 0; i < directions.length; i++) {
   var container = document.getElementById(containers[i]);
-  var dir = directions[i];
-        
+  var direction = directions[i];
+
   // Interaction of start time with parent iterations. Each child should
   // complete the full animation, starting 1.0s into the parent iteration.
   new Animation(container.getElementsByClassName("a")[0], animation,
-      {duration: 1.0}, group(dir), 1.0);
+      {duration: 1.0}, group(direction), 1.0);
   new Animation(container.getElementsByClassName("b")[0], animation,
-      {duration: 1.0}, groupWithFixedDuration(dir), 1.0);
+      {duration: 1.0}, groupWithFixedDuration(direction), 1.0);
   // Interaction of default start time with parent iterations. At the time of
   // addition, the first group has a duration, and hence iteration time of
   // zero, so the child picks up a start time of zero.  The parent then updates
@@ -130,6 +131,6 @@ for (var i = 0; i < directions.length; i++) {
       new Animation(container.getElementsByClassName("d")[0], animation,
           {duration: 1.0}, group2);
     };
-  }(container, group(dir), groupWithFixedDuration(dir)), 500);
+  }(container, group(direction), groupWithFixedDuration(direction)), 500);
 }
 </script>
