--- a/test-svg-anim.html
+++ b/test-svg-anim.html
@@ -1,4 +1,4 @@
-<!-- 
+<!--
 Copyright 2012 Google Inc. All Rights Reserved.
 
 Licensed under the Apache License, Version 2.0 (the "License");
@@ -33,6 +33,6 @@ limitations under the License.
 <script>
 var rect = document.querySelector(".anim")
 
-var a = new Animation(rect, {x: "400px"}, 1);
+new Animation(rect, {x: "400px"}, 1);
 
 </script>
