--- a/test-transform-units.html
+++ b/test-transform-units.html
@@ -36,13 +36,11 @@ limitations under the License.
 <script>
 
 var transformValues = [
-  ['translate(0px)', 'translate(30px)', 'translate(20px, 40px)',
-   'translateX(20px)', 'translateY(20px)'],
-  ['scale(1, 1)', 'scale(1.5, 3)', 'scale(2)', 'scaleX(2)', 'scaleY(2)'],
-  ['rotate(0deg)', 'rotate(50deg)'],
-  ['skew(0deg)', 'skew(20deg)', 'skew(40deg, 20deg)'],
-  ['skewX(0deg)', 'skewX(40deg)'],
-  ['skewY(0deg)', 'skewY(40deg)']
+  ['translate(0px, 0px)', 'translate(10em)', 'translate(10%, 1in)'],
+  ['rotate(0deg)', 'rotate(50deg)', 'rotate(3rad)', 'rotate(200grad)'],
+  ['skew(0deg)', 'skew(20rad)', 'skew(40grad, 20rad)'],
+  ['skewX(0deg)', 'skewX(20grad)', 'skewX(40rad)'],
+  ['skewY(0deg)', 'skewY(20rad)', 'skewY(40grad)']
 ];
 
 var separation_x = 100;
