--- a/test-harness.html
+++ b/test-harness.html
@@ -21,6 +21,7 @@ var tests = [
   'test-color-names.html',
   'test-composite-transforms.html',
   'test-compositor.html',
+  'test-duration.html',
   'test-fill-values.html',
   'test-font-weight.html',
   'test-grouped-anim-func.html',
