Fix updating TimedItem.endTime
TimedItem.endTime should be updated in response to changes to startTime,
duration and animationDuration. This change fixes this and adds a test.

--- a/test-harness.html
+++ b/test-harness.html
@@ -31,6 +31,7 @@ var tests = [
   'test-iteration-start.html',
   'test-keyframe-creation.html',
   'test-length-units.html',
+  'test-modify-timing-params.html',
   'test-non-numeric.html',
   'test-parent.html',
   'test-path.html',
