Calculate TimedItem.endTime lazily
When the timing properties of a TimedItem in a hierarchy are modified, the
endTime must be updated before the parent is updated (in the case of a parallel
parent), but the endTime may also be affected by that update to the parent (in
the case of a sequence parent). To avoid this complexity, we calculate the
endTime lazily in the property getter.

This will also allow us to reduce the number of calls to updateTimeMarkers when
the timing properties of a TimedItem in a hierarchy are modified.

--- a/test/testcases/test-modify-timing-params.html
+++ b/test/testcases/test-modify-timing-params.html
@@ -124,6 +124,7 @@ var siblingAnim = new Animation(document.getElementById("anim"), {top: "100px"},
 var seqGroup = new SeqGroup([anim, siblingAnim], undefined, undefined, 0.0);
 check(anim.startTime, 0.0, "Sequence group should reset child startTime");
 check(siblingAnim.startTime, 8.0, "Sequence group should set child startTime");
+check(siblingAnim.endTime, 9.0, "Sequence group should set child endTime");
 check(seqGroup.duration, 9.0,
     "Sequence group duration should reflect child durations");
 check(seqGroup.endTime, 9.0,
