Take a copy of the array of children before creating an AnimationGroup
This avoids bugs due to the array being modified as a result of creating the
AnimationGroup. See
https://github.com/web-animations/web-animations-js/issues/65 for details.

Also add checks to make sure a TimedItem never sets itself as its parent.

--- a/test/test-harness.html
+++ b/test/test-harness.html
@@ -34,6 +34,7 @@ var tests = [
   'test-modify-timing-params.html',
   'test-non-numeric.html',
   'test-parent.html',
+  'test-parent-is-self.html',
   'test-path.html',
   'test-pause.html',
   'test-playback-rate.html',
