Fix reparenting when setting TimedItem.parentGroup
Makes sure that we update both the previous and new parents when assigning to
TimedItem.parentGroup. Also adds a number of tests concerned with reparenting.

--- a/test/test-harness.html
+++ b/test/test-harness.html
@@ -41,6 +41,7 @@ var tests = [
   'test-rectangle.html',
   'test-reparent.html',
   'test-seq-speed.html',
+  'test-set-parent.html',
   'test-start-time.html',
   'test-start-time-iterations.html',
   'test-step.html',
