--- a/test/testcases/test-set-parent.html
+++ b/test/testcases/test-set-parent.html
@@ -134,4 +134,29 @@ check(newestParent.children.length, 1, "New parent should now have 1 child");
 check(newestParent.children[0], child,
     "New parent should now have correct child");
 
+// Test that calling add() with an existing child causes that child to be moved
+// to the end of the list of children.
+var sibling = new Animation(elem, animFunc, 1.0);
+var seqGroup = new SeqGroup([child, sibling], undefined, undefined, 0.0);
+check(seqGroup.children.length, 2, "seqGroup.children.length");
+check(seqGroup.children[0], child, "First child should be 'child'");
+check(seqGroup.children[1], sibling, "Second child should be 'sibling'");
+check(child.startTime, 0.0, "Start time of 'child'");
+check(sibling.startTime, 1.0, "Start time of 'sibling'");
+seqGroup.add(seqGroup.children[0]);
+check(seqGroup.children.length, 2, "seqGroup.children.length");
+check(seqGroup.children[0], sibling, "First child should be 'sibling'");
+check(seqGroup.children[1], child, "Second child should be 'child'");
+check(sibling.startTime, 0.0, "Start time of 'sibling'");
+check(child.startTime, 1.0, "Start time of 'child'");
+
+// Test that reseting TimedItem.parentGroup to its existing value causes that
+// item to be moved to the end of its parent's list list of children.
+sibling.parentGroup = sibling.parentGroup;
+check(seqGroup.children.length, 2, "seqGroup.children.length");
+check(seqGroup.children[0], child, "First child should be 'child'");
+check(seqGroup.children[1], sibling, "Second child should be 'sibling'");
+check(child.startTime, 0.0, "Start time of 'child'");
+check(sibling.startTime, 1.0, "Start time of 'sibling'");
+
 </script>
