--- a/test/test-harness.html
+++ b/test/test-harness.html
@@ -17,6 +17,7 @@ limitations under the License.
 var tests = [
   'test-calc.html',
   'test-change-playback-rate.html',
+  'test-clone.html',
   'test-color.html',
   'test-color-names.html',
   'test-composite-transforms.html',
