Add tests for compositing order
See https://github.com/web-animations/web-animations-js/issues/39

--- a/test/test-harness.html
+++ b/test/test-harness.html
@@ -21,6 +21,7 @@ var tests = [
   'test-color.html',
   'test-color-names.html',
   'test-composite-transforms.html',
+  'test-compositing-order.html',
   'test-compositor.html',
   'test-duration.html',
   'test-fill-values.html',
