--- a/test/testcases/test-parent-is-self.html
+++ b/test/testcases/test-parent-is-self.html
@@ -50,7 +50,7 @@ var fail = function(failureMessage) {
 };
 
 var check = function(actual, expected, failureMessage) {
-  if (actual != expected) {
+  if (actual !== expected) {
     fail(failureMessage + ". Expected '" + expected + "', got '" + actual +
         "'.");
   }
