Add tests for AnimationController and TimeSources

--- a/test/test-harness.html
+++ b/test/test-harness.html
@@ -22,6 +22,8 @@ var tests = [
   'test-color-names.html',
   'test-composite-transforms.html',
   'test-compositor.html',
+  'test-controller.html',
+  'test-custom-time-sources.html',
   'test-duration.html',
   'test-fill-values.html',
   'test-font-weight.html',
@@ -49,6 +51,7 @@ var tests = [
   'test-step.html',
   'test-svg-anim.html',
   'test-text-shadow.html',
+  'test-time-sources.html',
   'test-timing-functions.html',
   'test-to-animation.html',
   'test-visibility.html',
